--- a/src/app/cities/cities.component.html
+++ b/src/app/cities/cities.component.html
@@ -1,42 +1,27 @@
 <h1>Cities</h1>
 <p>Heres a list of cities: feel free to play with it</p>
 <p *ngIf="!cities"> <em>Loading</em></p>
-<!-- <table class="table table-striped" aria-labelledby="table-Label" [hidden]="!cities">
-    <thead>
-        <tr>
-            <th>ID</th>
-            <th>Name</th>
-            <th>Lat</th>
-            <th>Lon</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr *ngFor="let city of cities">
-            <td>{{ city.id }}</td>
-            <td>{{ city.name }}</td>
-            <td>{{ city.lat }}  </td>
-            <td>{{ city.lon}}</td>
-        </tr>
-    </tbody> 
- </table> -->
- <mat-paginator [hidden] = "!cities" [pageSize]="10" [pageSizeOptions]="[10, 20, 50]" showFirstLastButtons></mat-paginator>
- <table mat-table [dataSource]="cities" class="mat-elevation-z8" [hidden]="!cities">
+<mat-form-field [hidden]="!cities">
+    <input matInput #filter (keyup)="loadData(filter.value)" placeholder="Filter by name (or part of it)"> 
+</mat-form-field>
+ <table mat-table [dataSource]="cities" class="mat-elevation-z8" [hidden]="!cities" matSort (matSortChange)="loadData()"[matSortActive]="defaultSortColumn" [matSortDirection]="defaultSortOrder">
     <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef>ID</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>ID</th>
         <td mat-cell *matCellDef="let city">{{city.id}}</td>
     </ng-container>
     <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef>Name</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
         <td mat-cell *matCellDef="let city">{{city.name}}</td>
     </ng-container>
     <ng-container matColumnDef="lon">
-        <th mat-header-cell *matHeaderCellDef>Latidude</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Latidude</th>
         <td mat-cell *matCellDef="let city">{{city.lat}}</td>
     </ng-container>
     <ng-container matColumnDef="lat">
-        <th mat-header-cell *matHeaderCellDef>Longitude</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Longitude</th>
         <td mat-cell *matCellDef="let city">{{city.lon}}</td>
     </ng-container>
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row;columns: displayedColumns;"></tr>
  </table>
+ <mat-paginator [hidden] = "!cities" [pageSize]="10" [pageSizeOptions]="[10, 20, 50]" (page)="getData($event)" showFirstLastButtons></mat-paginator>
