--- a/src/app/cities/cities.component.html
+++ b/src/app/cities/cities.component.html
@@ -11,7 +11,9 @@
     </ng-container>
     <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
-        <td mat-cell *matCellDef="let city">{{city.name}}</td>
+        <td mat-cell *matCellDef="let city">
+            <a [routerLink]="['/city', city.id]">{{city.name}}</a>
+        </td>
     </ng-container>
     <ng-container matColumnDef="lon">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Latidude</th>
