--- a/src/app/cities/cities.component.html
+++ b/src/app/cities/cities.component.html
@@ -1,6 +1,7 @@
 <h1>Cities</h1>
 <p>Heres a list of cities: feel free to play with it</p>
 <p *ngIf="!cities"> <em>Loading</em></p>
+<button mat-flat-button color="primary" class="bn-add" *ngIf="cities" [routerLink]="['/city']">Add a new city</button>
 <mat-form-field [hidden]="!cities">
     <input matInput #filter (keyup)="loadData(filter.value)" placeholder="Filter by name (or part of it)"> 
 </mat-form-field>
