--- a/src/app/cities/city-edit.component.html
+++ b/src/app/cities/city-edit.component.html
@@ -2,23 +2,33 @@
     <h1>{{title}}</h1>
     <p *ngIf="this.id && !city"><em>Loading</em></p>
     <form [formGroup] ="form" (ngSubmit)="onSubmit()">
+        <p>
+            <mat-error *ngIf="form.invalid && form.hasError('isDupeCity')">
+                <strong>Error</strong>:
+                A city with the same <i>name</i>, <i>Longitude</i>, <i>Latitude</i> and <i>country</i> already exists.
+            </mat-error>
+        </p>
         <mat-form-field>
             <mat-label>Name: </mat-label>
             <input matInput formControlName="name" required placeholder="Type a name">
+            <mat-error *ngIf="this.form.controls['name'].errors?.['required']">Name is required</mat-error>
         </mat-form-field>
         <mat-form-field>
             <mat-label>Latitude: </mat-label>
             <input matInput formControlName="lat" required placeholder="Insert Latitude" type="number">
+            <mat-error *ngIf="this.form.controls['lat'].errors?.['required']">Latitude is required</mat-error>
         </mat-form-field>
         <mat-form-field>
             <mat-label>Longitude: </mat-label>
             <input matInput formControlName="lon" required placeholder="Insert Longitude" type="number">
+            <mat-error *ngIf="this.form.controls['lon'].errors?.['required']">Longitude is required</mat-error>
         </mat-form-field>
         <mat-form-field *ngIf="countries">
                 <mat-label>---- Select a country -----</mat-label>
-                <mat-select formControlName="countryId" id="countryId">
-                     <mat-option *ngFor="let country of countries" value = "country.id"> {{country.name}}</mat-option>
+                <mat-select id="countryId" formControlName="countryId" >
+                     <mat-option *ngFor="let country of countries" [value]= "country.id"> {{country.name}}</mat-option>
                 </mat-select>
+                <mat-error *ngIf="this.form.controls['countryId'].errors?.['required']">Please select a country</mat-error>
         </mat-form-field>
         <div>
             <button mat-flat-button color="primary" type="submit">{{this.id ? "Save" : "Create"}} </button>
