--- a/src/app/cities/city-edit.component.scss
+++ b/src/app/cities/city-edit.component.scss
@@ -1,5 +1,8 @@
 mat-form-field{
     display: block;
-    margin: 10px 0;
-    width: 100%;
+    width: 80%;
+    box-sizing: border-box;
+}
+.city-edit{
+    margin: 20px 10rem;
 }
