--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,2 +1,7 @@
-<p> A sample web application to demonstrate how to interact with ASP.NET, Angular, Entity Framework Core and a SQL Database</p>
+<div class="jumbotron">
+    <div class="container">
+        <h1>World Cities Test Application</h1>
+        <p> A sample web application to demonstrate how to interact with ASP.NET, Angular, Entity Framework Core and a SQL Database</p>
+    </div>
+</div>
 <img src="/assets/img/home.jpg" alt="WorldCities" class="home-cover" />
