--- a/src/app/cities/cities.component.html
+++ b/src/app/cities/cities.component.html
@@ -3,7 +3,7 @@
 <p *ngIf="!cities"> <em>Loading</em></p>
 <button mat-flat-button color="primary" class="bn-add" *ngIf="cities" [routerLink]="['/city']">Add a new city</button>
 <mat-form-field [hidden]="!cities">
-    <input matInput #filter (keyup)="loadData(filter.value)" placeholder="Filter by name (or part of it)"> 
+    <input matInput #filter (keyup)="onFilterTextChanged(filter.value)" placeholder="Filter by name (or part of it)"> 
 </mat-form-field>
  <table mat-table [dataSource]="cities" class="mat-elevation-z8" [hidden]="!cities" matSort (matSortChange)="loadData()"[matSortActive]="defaultSortColumn" [matSortDirection]="defaultSortOrder">
     <ng-container matColumnDef="id">
@@ -16,11 +16,11 @@
             <a [routerLink]="['/city', city.id]">{{city.name}}</a>
         </td>
     </ng-container>
-    <ng-container matColumnDef="lon">
+    <ng-container matColumnDef="lat">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Latidude</th>
         <td mat-cell *matCellDef="let city">{{city.lat}}</td>
     </ng-container>
-    <ng-container matColumnDef="lat">
+    <ng-container matColumnDef="lon">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Longitude</th>
         <td mat-cell *matCellDef="let city">{{city.lon}}</td>
     </ng-container>
