--- a/src/app/countries/countries.component.html
+++ b/src/app/countries/countries.component.html
@@ -1,8 +1,9 @@
 <h1>Countries</h1>
 <p>Here is a list of Countries: feel free to play with them</p>
 <p *ngIf="!countries" ><em>Loading...</em></p>
+<button mat-flat-button color="primary" [routerLink]="['/country']" > Add a new Country</button>
 <mat-form-field [hidden]="!countries">
-    <input matInput #filter (keyup)="loadData(filter.value)" placeholder="Filter by name (or part of it)">
+    <input matInput #filter (keyup)="onFilterTextChanged(filter.value)" placeholder="Filter by name (or part of it)">
 </mat-form-field>
 <table mat-table [dataSource]="countries" class="mat-elevate-z8" [hidden]="!countries" matSort (matSortChange)="loadData()" [matSortActive] = "defaultSortColumn" [matSortDirection]="defaultSortOrder">
 <ng-container matColumnDef="id">
@@ -11,7 +12,7 @@
 </ng-container>
 <ng-container matColumnDef="name">
     <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
-    <td mat-cell *matCellDef="let country">{{country.name}}</td>
+    <td mat-cell *matCellDef="let country"> <a [routerLink]="['/country',country.id]">{{country.name}}</a></td>
 </ng-container>
 <ng-container matColumnDef="iso2">
     <th mat-header-cell *matHeaderCellDef mat-sort-header>ISO 2</th>
