--- a/src/app/countries/countries.component.scss
+++ b/src/app/countries/countries.component.scss
@@ -1,7 +1,8 @@
 table.mat-table {
-    width: 100%;
+    width: 80%;
 }
 .mat-form-field {
     font-size:14px;
-    width: 100%;
+    width: 80%;
 }
+.btn-add {float:right;}
