--- a/src/app/countries/country-edit.component.html
+++ b/src/app/countries/country-edit.component.html
@@ -1,1 +1,23 @@
-<p>country-edit works!</p>
+<div class="country-edit">
+    <h1>{{title}}</h1>
+    <p *ngIf="this.id && !country"> <em>Loading ...</em></p>
+    <form [formGroup]="form"  (ngSubmit)="onSubmit()">
+        <mat-form-field>
+            <mat-label>Name:</mat-label>
+            <input matInput formControlName="name" required placeholder="Type a Name"/>
+            <mat-error *ngFor="let error of getErrors(form.get('name')!,'Name')"> {{error}}</mat-error>
+        </mat-form-field>
+        <mat-form-field>
+            <mat-label>ISO2: </mat-label>
+            <input matInput formControlName="iso2" required placeholder="Enter the ISO2 number"/>
+            <mat-error *ngFor="let error of getErrors(form.get('iso2')!,'ISO 3166-1 ALPHA 2 Country code')">{{error}}</mat-error>
+        </mat-form-field>
+        <mat-form-field>
+            <mat-label>ISO3: </mat-label>
+            <input matInput formControlName="iso3" required placeholder="Enter the ISO3 number"/>
+            <mat-error *ngFor="let error of getErrors(form.get('iso3')!,'ISO ALPHA 3 Country Code')">{{error}}</mat-error>     
+        </mat-form-field>
+    <button mat-flat-button color="primary" type="submit" [routerLink]="['/countries']"> {{ this.id? "Save" : "Create"}}</button>
+    <button mat-flat-button color="secondary" [routerLink]="['/countries']">Cancel</button> 
+   </form>
+</div>
