--- a/src/app/cities/cities.component.html
+++ b/src/app/cities/cities.component.html
@@ -24,6 +24,12 @@
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Longitude</th>
         <td mat-cell *matCellDef="let city">{{city.lon}}</td>
     </ng-container>
+    <ng-container matColumnDef="countryName">
+        <th mat-header-cell *matHeaderCellDef mat-ort-header>Country</th>
+        <td mat-cell *matCellDef="let city">
+            <a [routerLink]="['/country',city.countryId]">{{city.countryName}}</a>
+        </td>
+    </ng-container>
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row;columns: displayedColumns;"></tr>
  </table>
