--- a/src/app/cities/city-edit.component.html
+++ b/src/app/cities/city-edit.component.html
@@ -15,13 +15,13 @@
         </mat-form-field>
         <mat-form-field>
             <mat-label>Latitude: </mat-label>
-            <input matInput formControlName="lat" required placeholder="Insert Latitude" type="number">
-            <mat-error *ngIf="this.form.controls['lat'].errors?.['required']">Latitude is required</mat-error>
+            <input matInput formControlName="lat" required placeholder="Insert Latitude">
+            <mat-error *ngFor="let error of getErrors(form.get('lat')!,'Latitude',{'pattern' : 'requires a positive or negative number with 0-4 decimal point'})">{{error}}</mat-error>
         </mat-form-field>
         <mat-form-field>
             <mat-label>Longitude: </mat-label>
-            <input matInput formControlName="lon" required placeholder="Insert Longitude" type="number">
-            <mat-error *ngIf="this.form.controls['lon'].errors?.['required']">Longitude is required</mat-error>
+            <input matInput formControlName="lon" required placeholder="Insert Longitude">
+            <mat-error *ngFor="let error of getErrors(form.get('lon')!,'Longitude',{'pattern' : 'requires a postive or negative number with 0-4 decimal number'})">{{error}}</mat-error>
         </mat-form-field>
         <mat-form-field *ngIf="countries">
                 <mat-label>---- Select a country -----</mat-label>
