--- a/src/app/countries/countries.component.html
+++ b/src/app/countries/countries.component.html
@@ -1,7 +1,9 @@
+<div class="jumbotron">
 <h1>Countries</h1>
 <p>Here is a list of Countries: feel free to play with them</p>
 <p *ngIf="!countries" ><em>Loading...</em></p>
 <button mat-flat-button color="primary" [routerLink]="['/country']" > Add a new Country</button>
+<br>
 <mat-form-field [hidden]="!countries">
     <input matInput #filter (keyup)="onFilterTextChanged(filter.value)" placeholder="Filter by name (or part of it)">
 </mat-form-field>
@@ -30,3 +32,4 @@
 <tr mat-row *matRowDef ="let row; columns: displayedColumns;"></tr>
 </table>
 <mat-paginator [hidden]="!countries" (page)="getData($event)" [pageSize]="10" [pageSizeOptions]="[10, 20, 50]" showFirstLastButtons></mat-paginator>
+</div>
